fix: center the light/dark mode icons

--- a/public/components/Header/style.module.scss
+++ b/public/components/Header/style.module.scss
@@ -86,8 +86,7 @@
 		height: 20px;
 		width: 20px;
 		font-size: 10px !important;
-		text-indent: -2px;
-		line-height: 22px;
+		line-height: 20px;
 		text-align: center;
 		font-family: arial;
 		transform: translate(var(--x, 0), -50%);
